feat: banners page

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -6048,7 +6048,7 @@
 
                 <a href="inbox/sns" class="title">
                   <span class="btn p-0 far fa-comments fs-8"></span>
-                  <h3 class="me-auto me-sm-0 mb-0">SNS</h3>
+                  <h3 class="me-auto me-sm-0 mb-0">SMS/CALLS</h3>
                 </a>
 
                 <!-- Label tied to the checkbox. Clicking it toggles the checkbox -->
@@ -6180,7 +6180,7 @@
                       <div class="d-flex align-items-center gap-2 fs-8">
                         <span class="far fa-comments fs-8"></span>
 
-                        <h4 class="mb-0 fs-9">SNS</h4>
+                        <h4 class="mb-0 fs-9">SMS/CALLS</h4>
                       </div>
                       <p class="opacity-75 text-secondary-emphasis fs-9">60</p>
                     </a>
